--- a/libft/Makefile
+++ b/libft/Makefile
@@ -33,7 +33,8 @@ SRCS := ./ft_isalpha.c \
 	./ft_putstr_fd.c \
 	./ft_putendl_fd.c \
 	./ft_putnbr_fd.c \
-	./ft_strcmp.c
+	./ft_strcmp.c \
+	./ft_putstr.c
 
 BSRCS := ./ft_lstnew_bonus.c ./ft_lstadd_front_bonus.c ./ft_lstsize_bonus.c \
 		 ./ft_lstlast_bonus.c ./ft_lstadd_back_bonus.c ./ft_lstdelone_bonus.c \
